Fixed series actions wrapping to two lines

--- a/UI/Cells/cells.less
+++ b/UI/Cells/cells.less
@@ -88,3 +88,7 @@ td.episode-status-cell, td.quality-cell {
     background-color: rgb(0, 129, 194);
   }
 }
+
+.series-actions-cell {
+  width: 40px;
+}
